# Exfil

./: .gitignore  README.md
docs/: F2_0_TOOLCHAIN.md  PHASE_B.md  PLAN.md
java-analyzer/: REF_LEDGER.md  build.gradle  settings.gradle
java-analyzer/src/main/java/com/exfilanalyzer/: App.java
java-analyzer/src/main/java/com/exfilanalyzer/classify/: ClassificationResult.java  ClassifiedEgress.java  Disposition.java  DownloadClassifier.java  DownloadState.java
java-analyzer/src/main/java/com/exfilanalyzer/correlate/: AnalysisResult.java  CorrelatedRun.java  EgressEvent.java  EventCorrelator.java  EvidenceChain.java
rust-observer/: Cargo.toml  REF_LEDGER.md
rust-observer/snoop/: Cargo.toml  build.rs
rust-observer/snoop-common/: Cargo.toml
rust-observer/snoop-common/src/: lib.rs
rust-observer/snoop-ebpf/: Cargo.toml  rust-toolchain.toml
rust-observer/snoop-ebpf/src/: main.rs  maps.rs
rust-observer/snoop/src/: main.rs  sensor.rs
sandbox/: canary-gen.sh  cleanup.sh  run-sandboxed.sh
sandbox/honeynet/: REF_LEDGER.md  start.sh
sandbox/honeynet/dns-sinkhole/: Dockerfile  go.mod  main.go  main_test.go
sandbox/honeynet/http-listener/: Dockerfile  go.mod  h4_repro_test.go  main.go  main_test.go
sandbox/samples/benign/: entrypoint.sh  run.sh
sandbox/samples/malicious-child/: Dockerfile  entrypoint.sh  run.sh
sandbox/samples/malicious-direct/: entrypoint.sh  run.sh
schema/: canary.schema.json  check_contracts.py  dns.schema.json  files.schema.json  http.schema.json  manifest.schema.json  network.schema.json  proc.schema.json
tests/: f0_1_build_gate.sh  f0_2_sandbox_gate.sh  f0_3_canary_gate.sh  f0_4_samples_gate.sh  f1_0_honeynet_dns_gate.sh  f1_1_honeynet_http_gate.sh  f1_2a_tls_ca_gate.sh  f1_2b_canary_gate.sh  f1_3_network_flow_gate.sh  f2_0_toolchain_gate.sh  f2_1_sensor_gate.sh  f2_2_connect_gate.sh
(+17 files in other folders)
