# ref: /home/mrg/Desktop/exfil-step-a-refs/snoop/Cargo.toml:1 (workspace split and default-members)
[workspace]
members = [
    "snoop",
    "snoop-common",
    "snoop-ebpf",
]
default-members = ["snoop", "snoop-common"]
resolver = "2"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package.snoop-ebpf]
opt-level = 2
codegen-units = 1

[profile.release.package.snoop-ebpf]
opt-level = 2
codegen-units = 1
