# ref: /home/mrg/Desktop/exfil-step-a-refs/snoop/snoop/Cargo.toml:1 (userspace binary crate shape)
[package]
name = "snoop"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "snoop"
path = "src/main.rs"

[dependencies]
snoop-common = { path = "../snoop-common" }
serde_json = "=1.0.150"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "=0.13.1", features = ["async_tokio"] }
aya-log = "=0.2.1"
